--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,16 @@
     "version": "2.0.0",
     "tasks": [
         {
+      "label": "Compile Java",
+      "type": "shell",
+      "command": "javac",
+      "args": [
+        "${file}"
+      ],
+      "group": "build",
+      "problemMatcher": []
+    },
+        {
             "label": "compile and run",
             "type": "shell",
             "command": "cmd.exe",
